finished Python Tutorial #2

--- a/Python2.ipynb
+++ b/Python2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f5ff611f42f8bc61161aaf8286d53434e0ebc582b60492da2be1b69451409e4d"
+  "signature": "sha256:37a9d8facf0763d8a34254b322ff8d40e15bffb18c9ff9602d68313624f3fcc7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Last week you got familiar with how to manipulate some basic Python variable, one way to read in data, and how to make a simple plot.  This week you will extend your abilities in powerful ways, learning conditional statements, for and while loops, and how to write functions.\n",
+      "Last week you got familiar with how to manipulate some basic Python variable, one way to read in data, and how to make a simple plot.  This week you will extend your abilities in powerful ways, learning conditional statements, for and while loops, and how to write functions.  We will also touch on a more generic way to read and write files.\n",
       "\n",
       "Note that white space (placement of spaces/indentation) is important to how Python interprets your code.  You will see that indented lines are interpreted as a block of code that runs under the condition described before it in a line that ends with a colon (:).  It is important to keep track of our indentation to get your code to run as expected.\n",
       "\n",
@@ -322,8 +322,494 @@
      "input": [
       "#99 bottles is too much beer for anyone.  Please drink responsibly.\n",
       "\n",
-      "#A \"for\" loop executes a chunk of code repeatedly as well, but it does so by working through the items of a suppli"
+      "#A \"for\" loop executes a chunk of code repeatedly as well, but it does so by systematically working through the items of a \n",
+      "#supplied list.\n",
+      "\n",
+      "#Consider that we might want to print the squares of the digits 0 to 5 squared\n",
+      "lista=range(6)\n",
+      "for value in lista:\n",
+      "    print value ** 2"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0\n",
+        "1\n",
+        "4\n",
+        "9\n",
+        "16\n",
+        "25\n"
+       ]
+      }
+     ],
+     "prompt_number": 67
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Perhaps more usefully, we want to go through a list and modify the values in a systematic way\n",
+      "\n",
+      "#Let's translate all the strings in a list to pig latin, for example:\n",
+      "words = ['keaton','mikemon','star','galaxy']\n",
+      "for i in range(len(words)): #i give the indices!\n",
+      "    #note how we index the word in the list first, then the letters in that word\n",
+      "    words[i] = words[i][1:]+words[i][0]+'ay'\n",
+      "    \n",
+      "print words"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "['eatonkay', 'ikemonmay', 'tarsay', 'alaxygay']\n"
+       ]
+      }
+     ],
+     "prompt_number": 86
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Another useful command to use with for loops in enumerate\n",
+      "#enumerate returns the elements and indices of a list\n",
+      "for i in enumerate(words):\n",
+      "    print i\n",
+      "\n",
+      "#this returns a variable type that we haven't discussed yet, called a \"tuple\"\n",
+      "#You can explore this type more on your own, but for now I'll demonstrate how to unpack a tuple:\n",
+      "for i,word in enumerate(words):\n",
+      "    print i\n",
+      "    print word\n",
+      "\n",
+      "#Pig latin is for for latin pigs.  Let's transalate those words back.\n",
+      "for i,word in enumerate(words):\n",
+      "    words[i]=word[-3]+word[0:-3]\n",
+      "\n",
+      "print words\n",
+      "    \n",
+      "#enumerate saves us from the complicated indexing of the previous example, at the cost of introducing tuples.\n",
+      "#As is often the case in Python, there are often many ways to reach the same result."
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "(0, 'eatonkay')\n",
+        "(1, 'ikemonmay')\n",
+        "(2, 'tarsay')\n",
+        "(3, 'alaxygay')\n",
+        "0\n",
+        "eatonkay\n",
+        "1\n",
+        "ikemonmay\n",
+        "2\n",
+        "tarsay\n",
+        "3\n",
+        "alaxygay\n",
+        "['keaton', 'mikemon', 'star', 'galaxy']\n"
+       ]
+      }
+     ],
+     "prompt_number": 87
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Reading/Writing Files"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#To open a generic file, we use the \"open\" command.\n",
+      "#Note that you won't be able to copy and paste these specific examples since you don't have the files that I'm reading in!\n",
+      "\n",
+      "f = open('Whitman.txt','r') #'r' stands for read. 'w' stands for write, as we will see.\n",
+      "print type(f)\n",
+      "\n",
+      "#We can read in all file contents as a single string as follows:\n",
+      "contents = f.read()\n",
+      "print type(contents)\n",
+      "print contents\n",
+      "\n",
+      "#close the file when you're done with it!\n",
+      "f.close()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "<type 'file'>\n",
+        "<type 'str'>\n",
+        "WHEN I HEARD THE LEARN'D ASTRONOMER\n",
+        "\n",
+        "When I heard the learn'd astronomer,\n",
+        "When the proofs, the figures, were ranged in columns before me,\n",
+        "When I was shown the charts and diagrams, to add, divide, and measure them,\n",
+        "When I sitting heard the astronomer where he lectured with much applause in the lecture-room,\n",
+        "How soon unaccountable I became tired, and sick,\n",
+        "Till rising and gliding out I wander'd off by myself,\n",
+        "In the mystical moist night-air, and from time to time,\n",
+        "Look'd up in perfect silence at the stars. \n",
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 93
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#It is often more useful in practice to read in a file line-by-line\n",
+      "#Each line may contain information about a different star in astronomy, for example.\n",
+      "f = open('Whitman.txt','r')\n",
+      "firstline = f.readline()\n",
+      "print firstline\n",
+      "\n",
+      "#Note that there is a '\\n' at the end of this string that acts as a single character to indicate that there is another line \n",
+      "#following that is not displayed when printing.  This can be a bit tricky at times!\n",
+      "print firstline[-1] == '\\n'\n",
+      "\n",
+      "#Once you read in a line, later calls to readline() will read in the next lines:\n",
+      "print f.readline() #Blank line in file! == '\\n'\n",
+      "print f.readline()\n",
+      "print f.readline()\n",
+      "print f.readline()\n",
+      "print f.readline()\n",
+      "print f.readline()\n",
+      "print f.readline()\n",
+      "print f.readline()\n",
+      "print f.readline() #Last line, no '\\n' at end of string\n",
+      "print f.readline() #Beyond end of file returns empty string == ''\n",
+      "\n",
+      "f.close() #close your files!"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "WHEN I HEARD THE LEARN'D ASTRONOMER\n",
+        "\n",
+        "True\n",
+        "\n",
+        "\n",
+        "When I heard the learn'd astronomer,\n",
+        "\n",
+        "When the proofs, the figures, were ranged in columns before me,\n",
+        "\n",
+        "When I was shown the charts and diagrams, to add, divide, and measure them,\n",
+        "\n",
+        "When I sitting heard the astronomer where he lectured with much applause in the lecture-room,\n",
+        "\n",
+        "How soon unaccountable I became tired, and sick,\n",
+        "\n",
+        "Till rising and gliding out I wander'd off by myself,\n",
+        "\n",
+        "In the mystical moist night-air, and from time to time,\n",
+        "\n",
+        "Look'd up in perfect silence at the stars. \n",
+        "\n",
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 125
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Let's count words in each line of this poem.\n",
+      "f = open('Whitman.txt','r')\n",
+      "\n",
+      "#We're not interested in counting the words in the title or in the blank line, so we'll read them in to get past them\n",
+      "f.readline()\n",
+      "f.readline()\n",
+      "\n",
+      "#Let's set up a blank list that will hold the numbers of words in each line.\n",
+      "#We'll append the word counts as we go through the lines\n",
+      "wordsinline=[] #empty list\n",
+      "\n",
+      "#Now to the meat of the poem.\n",
+      "for line in f:\n",
+      "    words = line.split(' ') #split string at the spaces.\n",
+      "    #Astronomical data will come in many forms, often with space or comma separated values.\n",
+      "    wordsinline.append(len(words))\n",
+      "    \n",
+      "print wordsinline\n",
+      "\n",
+      "f.close() #close your files!"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[6, 11, 14, 15, 8, 10, 10, 9]\n"
+       ]
+      }
+     ],
+     "prompt_number": 133
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#To write files, open the filename in 'w' mode\n",
+      "\n",
+      "#It's binge drinking time.\n",
+      "\n",
+      "f = open('99bottles.txt','w')\n",
+      "beeronthewall=99\n",
+      "while beeronthewall > 0:\n",
+      "    # Remember that the \"\\n\" is needed to indicate the start of a new line.\n",
+      "    f.write(str(beeronthewall)+' bottles of beer on the wall.\\n')\n",
+      "    f.write(str(beeronthewall)+' bottles of beer.\\n')\n",
+      "    f.write('Take one down and pass it around.\\n')\n",
+      "    beeronthewall -= 1 # \"-=\" means set the value to one less than it was\n",
+      "    f.write(str(beeronthewall)+' bottles of beer on the wall...\\n\\n') #skip a line after each verse.\n",
+      "\n",
+      "f.close() #You'll drink yourself into an early grave. But not before you close your files."
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 136
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Functions"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Finally we're on to our last topic for these tutorials.  This had been by no means a comprehensive overview of Python's\n",
+      "#capabilities. Virtually anything a computer can do, it can be made to do with Python.  Google is your friend.\n",
+      "\n",
+      "#Anything that you want code to be able to do more than once or twice is best written as a function.\n",
+      "#You already have a ton of experience running functions.\n",
+      "\n",
+      "print len(range(100)) #Len is a function!  Range is a function!"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "100\n"
+       ]
+      }
+     ],
+     "prompt_number": 138
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Functions are defined by typing \"def function_name():\"\n",
+      "#Just like loops and conditional statements, everything on indented lines after the colon is the code belonging to the function.\n",
+      "\n",
+      "def helloworld():\n",
+      "    print \"Hello world!\"\n",
+      "\n",
+      "#These functions are then called by just typing their name, with parentheses.\n",
+      "helloworld()\n",
+      "print type(helloworld)\n",
+      "\n",
+      "#It's just that easy to greet the world now!"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Hello world!\n",
+        "<type 'function'>\n"
+       ]
+      }
+     ],
+     "prompt_number": 150
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Functions can importantly take in values to parameter variables, and return variables.\n",
+      "\n",
+      "#You saw how to import a square-root function from the math module before, but that's such a simple task we might as easily\n",
+      "#write our own:\n",
+      "\n",
+      "def sqrt(value):\n",
+      "    return value ** 0.5 #This is passed back as the value of the function evaluation.\n",
+      "\n",
+      "sqrttwo = sqrt(2)\n",
+      "\n",
+      "print sqrttwo\n",
+      "print type(sqrttwo)\n",
+      "\n",
+      "#Such a common task as taking the square root of a number demands its own function!"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1.41421356237\n",
+        "<type 'float'>\n"
+       ]
+      }
+     ],
+     "prompt_number": 152
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Functions can call other functions, they can contain loops and conditional statements. \n",
+      "#They can have multiple parameters, and some of these can be optional with default values:\n",
+      "\n",
+      "def posorneg(n,fullword=False):\n",
+      "    #Returns a plus or minus character depending on if passed balue is positive or negative.\n",
+      "    #Optionally return the full word \"positive\" or \"negative\"\n",
+      "    if n < 0:\n",
+      "        if fullword:\n",
+      "            return 'negative'\n",
+      "        else:\n",
+      "            return '-'\n",
+      "    else:\n",
+      "        if fullword:\n",
+      "            return 'positive'\n",
+      "        else:\n",
+      "            return '+'\n",
+      "\n",
+      "print posorneg(-3.4)\n",
+      "print posorneg(-12/65.,fullword=True)\n",
+      "print posorneg(0.0,fullword=False)\n",
+      "print posorneg((-1)**32,True) #This function understands which optional parameter is set to True because there's only one.\n",
+      "                              #More complicated functions may not."
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "-\n",
+        "negative\n",
+        "+\n",
+        "positive\n"
+       ]
+      }
+     ],
+     "prompt_number": 172
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Interestingly, what happens in a function stays in a function unless it's \"return\"ed\n",
+      "#This provides a safety buffer against variable name conflicts, but it means you have to pass AND return everything you want\n",
+      "#the function to work with or affect.\n",
+      "\n",
+      "string = \"Can't touch this\"\n",
+      "\n",
+      "def trytotouchit():\n",
+      "    string = \"I sure can touch this.\"\n",
+      "\n",
+      "print string\n",
+      "trytotouchit()\n",
+      "print string"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Can't touch this\n",
+        "Can't touch this\n"
+       ]
+      }
+     ],
+     "prompt_number": 171
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#It's not quite time to bask fully in your learn'd state.\n",
+      "#We have a real science project to help you to practice these skills, so please continue on from your lab instructions.\n",
+      "#Don't hesitate to ask a mentor for help if you get stuck.\n",
+      "#If you get discouraged, take a break to meditate on some Whitman and look at sweet space pictures on the Internet.\n",
+      "\n",
+      "f = open('Whitman.txt','r')\n",
+      "print f.read()\n",
+      "f.close()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "WHEN I HEARD THE LEARN'D ASTRONOMER\n",
+        "\n",
+        "When I heard the learn'd astronomer,\n",
+        "When the proofs, the figures, were ranged in columns before me,\n",
+        "When I was shown the charts and diagrams, to add, divide, and measure them,\n",
+        "When I sitting heard the astronomer where he lectured with much applause in the lecture-room,\n",
+        "How soon unaccountable I became tired, and sick,\n",
+        "Till rising and gliding out I wander'd off by myself,\n",
+        "In the mystical moist night-air, and from time to time,\n",
+        "Look'd up in perfect silence at the stars. \n",
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 175
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
