Make 2nd tutorial Python 3 compatible

--- a/Python2.ipynb
+++ b/Python2.ipynb
@@ -11,11 +11,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Last week you got familiar with how to manipulate some basic Python variable, one way to read in data, and how to make a simple plot.  This week you will extend your abilities in powerful ways, learning conditional statements, for and while loops, and how to write functions.  We will also touch on a more generic way to read and write files.\n",
+    "Last week you got familiar with how to manipulate some basic Python variables, one way to read in data, and how to make a simple plot.  This week you will extend your abilities in powerful ways, learning conditional statements, for and while loops, and how to write functions.  We will also touch on a more generic way to read and write files.\n",
     "\n",
     "Note that white space (placement of spaces/indentation) is important to how Python interprets your code.  You will see that indented lines are interpreted as a block of code that runs under the condition described before it in a line that ends with a colon (:).  It is important to keep track of our indentation to get your code to run as expected.\n",
     "\n",
     "The following are only very limited examples of the Python features, but are meant to be representative of their most basic characteristics.  You may want to refer to these examples (and those from the first Python Introduction) as you complete your Lab 2 assignments.  You are not required to copy and run all of these examples, since the output is shown here, but you may find it helpful to copy and modify some examples here to gain a better understanding of how they work."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#You should mostly understand this setup line by now.\n",
+    "from __future__ import print_function, division"
    ]
   },
   {
@@ -27,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -54,18 +66,18 @@
     "#The basic ways to test a value/variable are as follows:\n",
     "a = -1 #example number \n",
     "b = 45 #example number\n",
-    "print a > b #a greater than b?\n",
-    "print a >= b #a greater than or equal to b?\n",
-    "print a < b #a less than b?\n",
-    "print a <= b #a less than or equal to b?\n",
-    "print a == b #a equal to b?\n",
-    "print a != b #a not equal to b?\n",
-    "print not a == b #not a equal to b? (equiv. to line above in this case)"
+    "print(a > b) #a greater than b?\n",
+    "print(a >= b) #a greater than or equal to b?\n",
+    "print(a < b) #a less than b?\n",
+    "print(a <= b) #a less than or equal to b?\n",
+    "print(a == b) #a equal to b?\n",
+    "print(a != b) #a not equal to b?\n",
+    "print(not a == b) #not a equal to b? (equiv. to line above in this case)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -97,17 +109,17 @@
     "if testnumber !=0: #deal with nonzero numbers first\n",
     "    if testnumber > 0:\n",
     "        sqrtnum = np.sqrt(testnumber)\n",
-    "        print 'The square root of '+str(testnumber)+' is '+str(sqrtnum)\n",
+    "        print('The square root of '+str(testnumber)+' is '+str(sqrtnum))\n",
     "    else: #if the previous \"if\" statement wasn't met, run the code in the \"else\" statement\n",
     "        imaginaryroot = np.sqrt(-1*testnumber)\n",
-    "        print 'The square root of '+str(testnumber)+' is '+str(imaginaryroot)+'i'\n",
+    "        print('The square root of '+str(testnumber)+' is '+str(imaginaryroot)+'i')\n",
     "else: #notice the level of this indentation. This \"else\" command is an exception to the previous \"if\" on the same line!\n",
-    "    print \"This number is zero.\""
+    "    print(\"This number is zero.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -129,19 +141,19 @@
     "#Let's see how that works, with truth tables\n",
     "\n",
     "#There are four combinations we can test for the \"and\" case:\n",
-    "print True and True\n",
-    "print True and False\n",
-    "print False and True\n",
-    "print False and False\n",
+    "print(True and True)\n",
+    "print(True and False)\n",
+    "print(False and True)\n",
+    "print(False and False)\n",
     "\n",
     "#linking conditions together with \"and\" creates an combined condition that \n",
     "#is only true if all individual tests are True\n",
-    "print (5 > 3) and 3 == np.sqrt(9) and not 5 < -1"
+    "print((5 > 3) and 3 == np.sqrt(9) and not 5 < -1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -162,20 +174,20 @@
     "#We can also do truth tables for \"or\"\n",
     "\n",
     "#There are also four combinations we can test for the \"or\" case:\n",
-    "print True or True\n",
-    "print True or False\n",
-    "print False or True\n",
-    "print False or False\n",
+    "print(True or True)\n",
+    "print(True or False)\n",
+    "print(False or True)\n",
+    "print(False or False)\n",
     "\n",
     "#This is satisfied if ANY of the individual conditions are True\n",
     "\n",
     "#example\n",
-    "print (5 > 3) or 3 != np.sqrt(9) or 5 < -1"
+    "print((5 > 3) or 3 != np.sqrt(9) or 5 < -1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -194,7 +206,7 @@
     "x=12\n",
     "\n",
     "if x < 0 or x > 0:\n",
-    "    print \"You can safely divide things by \"+str(x)"
+    "    print(\"You can safely divide things by \"+str(x))"
    ]
   },
   {
@@ -206,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -249,18 +261,18 @@
     "\n",
     "beeronthewall=4\n",
     "while beeronthewall > 0:\n",
-    "    print str(beeronthewall)+' bottles of beer on the wall.'\n",
-    "    print str(beeronthewall)+' bottles of beer.'\n",
-    "    print 'Take one down and pass it around.'\n",
+    "    print(str(beeronthewall)+' bottles of beer on the wall.')\n",
+    "    print(str(beeronthewall)+' bottles of beer.')\n",
+    "    print('Take one down and pass it around.')\n",
     "    beeronthewall -= 1 # \"-=\" means set the value to one less than it was\n",
-    "    print str(beeronthewall)+' bottles of beer on the wall...\\n' \n",
+    "    print(str(beeronthewall)+' bottles of beer on the wall...\\n')\n",
     "    # the \"\\n\" means to add an extra line break here in the string\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -279,7 +291,7 @@
     }
    ],
    "source": [
-    "#99 bottles is too much beer for anyone.  Please drink responsibly.\n",
+    "#Please drink responsibly.\n",
     "\n",
     "#A \"for\" loop executes a chunk of code repeatedly as well, but it does so by \n",
     "#systematically working through the items of a supplied list.\n",
@@ -287,12 +299,12 @@
     "#Consider that we might want to print the squares of the digits 0 to 5\n",
     "lista=range(6)\n",
     "for value in lista:\n",
-    "    print value ** 2"
+    "    print(value ** 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -314,12 +326,12 @@
     "    #note how we index the word in the list first, then the letters in that word\n",
     "    words[i] = words[i][1:]+words[i][0]+'ay'\n",
     "    \n",
-    "print words"
+    "print(words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -333,11 +345,11 @@
     }
    ],
    "source": [
-    "#Pig latin is for for latin pigs.  Let's transalate those words back.\n",
+    "#Pig latin is for latin pigs.  Let's transalate those words back.\n",
     "for i in range(len(words)):\n",
     "    words[i]=words[i][-3]+words[i][0:-3]\n",
     "\n",
-    "print words"
+    "print (words)"
    ]
   },
   {
@@ -349,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -374,14 +386,14 @@
     "#is best written as a function.\n",
     "#You already have a ton of experience running functions.\n",
     "\n",
-    "print len(range(100)) #How many numbers in the range 0-99?\n",
-    "print type(len) #Len is a function!\n",
-    "print type(range) #Range is a function!"
+    "print(len(range(100))) #How many numbers in the range 0-99?\n",
+    "print(type(len)) #Len is a function!\n",
+    "print(type(range)) #Range is a function!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -401,18 +413,18 @@
     "#lines after the colon is the code belonging to the function.\n",
     "\n",
     "def helloworld():\n",
-    "    print \"Hello world!\"\n",
+    "    print(\"Hello world!\")\n",
     "\n",
     "#These functions are then called by just typing their name, with parentheses.\n",
     "helloworld()\n",
-    "print type(helloworld)\n",
+    "print(type(helloworld))\n",
     "\n",
     "#It's just that easy to greet the world now!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -438,15 +450,15 @@
     "\n",
     "sqrttwo = sqrt(2)\n",
     "\n",
-    "print sqrttwo\n",
-    "print type(sqrttwo)\n",
+    "print(sqrttwo)\n",
+    "print(type(sqrttwo))\n",
     "\n",
     "#Such a common task as taking the square root of a number demands its own function!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -480,17 +492,17 @@
     "        else:\n",
     "            return '+'\n",
     "\n",
-    "print posorneg(-3.4)\n",
-    "print posorneg(-12/65.,fullword=True)\n",
-    "print posorneg(0.0,fullword=False)\n",
-    "print posorneg((-1)**32,True) \n",
+    "print(posorneg(-3.4))\n",
+    "print(posorneg(-12/65.,fullword=True))\n",
+    "print(posorneg(0.0,fullword=False))\n",
+    "print(posorneg((-1)**32,True))\n",
     "#This function understands which optional parameter is set to True because there's only one.\n",
     "#More complicated functions may not."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -514,14 +526,14 @@
     "def trytotouchit():\n",
     "    string = \"I sure can touch this.\"\n",
     "\n",
-    "print string\n",
+    "print(string)\n",
     "trytotouchit()\n",
-    "print string"
+    "print(string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -541,7 +553,7 @@
     "def topiglatin(word):\n",
     "    return word[1:]+word[0]+'ay'\n",
     "\n",
-    "print topiglatin('donut')"
+    "print(topiglatin('donut'))"
    ]
   },
   {
@@ -553,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -582,14 +594,15 @@
     "#To open a generic file, we use the \"open\" command.\n",
     "#Note that you won't be able to copy and paste these specific examples \n",
     "#since you don't have the files that I'm reading in! But this works for\n",
+    "#any text file.\n",
     "\n",
     "f = open('Whitman.txt','r') #'r' stands for read. 'w' stands for write, as we will see.\n",
-    "print type(f)\n",
+    "print(type(f))\n",
     "\n",
     "#We can read in all file contents as a single string as follows:\n",
     "contents = f.read()\n",
-    "print type(contents)\n",
-    "print contents\n",
+    "print(type(contents))\n",
+    "print(contents)\n",
     "\n",
     "#close the file when you're done with it!\n",
     "f.close()"
@@ -597,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -636,31 +649,31 @@
     "#Each line may contain information about a different star in astronomy, for example.\n",
     "f = open('Whitman.txt','r')\n",
     "firstline = f.readline()\n",
-    "print firstline\n",
+    "print(firstline)\n",
     "\n",
     "#Note that there is a '\\n' at the end of this string that acts as a single character \n",
     "#to indicate that there is another line following that is not displayed when printing.  \n",
     "#This can be a bit tricky at times!\n",
-    "print firstline[-1] == '\\n'\n",
+    "print(firstline[-1] == '\\n')\n",
     "\n",
     "#Once you read in a line, later calls to readline() will read in the next lines:\n",
-    "print f.readline() #Blank line in file! == '\\n'\n",
-    "print f.readline()\n",
-    "print f.readline()\n",
-    "print f.readline()\n",
-    "print f.readline()\n",
-    "print f.readline()\n",
-    "print f.readline()\n",
-    "print f.readline()\n",
-    "print f.readline() #Last line, no '\\n' at end of string\n",
-    "print f.readline() #Beyond end of file returns empty string == ''\n",
+    "print(f.readline()) #Blank line in file! == '\\n'\n",
+    "print(f.readline())\n",
+    "print(f.readline())\n",
+    "print(f.readline())\n",
+    "print(f.readline())\n",
+    "print(f.readline())\n",
+    "print(f.readline())\n",
+    "print(f.readline())\n",
+    "print(f.readline()) #Last line, no '\\n' at end of string\n",
+    "print(f.readline()) #Beyond end of file returns empty string == ''\n",
     "\n",
     "f.close() #close your files!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -692,14 +705,14 @@
     "    #Astronomical data will come in many forms, often with space or comma separated values.\n",
     "    wordsinline.append(len(words))\n",
     "    \n",
-    "print wordsinline\n",
+    "print(wordsinline)\n",
     "\n",
     "f.close() #close your files!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -724,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -756,7 +769,7 @@
     "#and look at sweet space pictures on the Internet.\n",
     "\n",
     "f = open('Whitman.txt','r')\n",
-    "print f.read()\n",
+    "print(f.read())\n",
     "f.close()"
    ]
   }
@@ -777,7 +790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
